--- a/pom.xml
+++ b/pom.xml
@@ -334,7 +334,7 @@
         <profile>
             <id>dev-localhost</id>
             <properties>
-                <pro.jdbc.url>jdbc:mysql://4.16.1.158:3306/leoman_framework_demo?characterEncoding=UTF-8</pro.jdbc.url>
+                <pro.jdbc.url>jdbc:mysql://4.16.1.158:3306/leoman_rcbus?characterEncoding=UTF-8</pro.jdbc.url>
                 <pro.jdbc.username>root</pro.jdbc.username>
                 <pro.jdbc.password>root</pro.jdbc.password>
                 <pro.upload.url>http://4.16.3.184:8081/files/upload/</pro.upload.url>
