--- a/pom.xml
+++ b/pom.xml
@@ -328,6 +328,14 @@
             <artifactId>jmf</artifactId>
             <version>2.1.1e</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
