--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -53,7 +53,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <filter>
+    <!--<filter>
         <filter-name>AdminFilter</filter-name>
         <filter-class>com.leoman.common.filter.AdminFilter</filter-class>
         <init-param>
@@ -64,14 +64,14 @@
     <filter-mapping>
         <filter-name>AdminFilter</filter-name>
         <url-pattern>/admin/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
 
     <filter>
         <filter-name>WechatFilter</filter-name>
         <filter-class>com.leoman.common.filter.WechatFilter</filter-class>
         <init-param>
             <param-name>skipUrls</param-name>
-            <param-value>/wechat/login/*,/wechat/login,/wechat/register1,/wechat/register2,/wechat/agreement,/wechat/index</param-value>
+            <param-value>/wechat/login/*,/wechat/login,/wechat/register,/wechat/register1,/wechat/register2,/wechat/agreement,/wechat/index,/wechat/sms/code,/wechat/check/code</param-value>
         </init-param>
     </filter>
     <filter-mapping>
