--- a/common/src/main/resources/conf/system.properties
+++ b/common/src/main/resources/conf/system.properties
@@ -6,12 +6,12 @@ upload.path = ${pro.upload.path}
 
 
 
-weixin.appId=wxc0dd28b467224a05
+weixin.appId=wxd7e6d638dcb6bfbf
 weixin.secret=90c960d02bace8f1ec846a17c3650042
-weixin.token=burgwb725leaf
-weixin.aesKey=DuraGyqqd8inqERSwKslb10GAIwohsucdPRpeJgXhMg
-weixin.partnerId=1329953301
-weixin.partnerKey=E10ADC3949BA59ABBE56E057F20F883E
+weixin.token=rcbuswh5725leaf
+weixin.aesKey=0JrZ8koGxMOBRxq1XazkG9QBBZ7N0w39hLVb73bpnW8
+weixin.partnerId=1386320702
+weixin.partnerKey=952070
 
 
 sms.api.key=0097c3f7f892c9314b98076b588d994d
