--- a/common/src/main/resources/conf/system.properties
+++ b/common/src/main/resources/conf/system.properties
@@ -8,7 +8,7 @@ upload.path = ${pro.upload.path}
 
 weixin.appId=wxd7e6d638dcb6bfbf
 weixin.secret=590a56ca299e9823a88d93025eed7f4f
-weixin.token=rcbuswh5725leaf
+weixin.token=weixin
 weixin.aesKey=0JrZ8koGxMOBRxq1XazkG9QBBZ7N0w39hLVb73bpnW8
 weixin.partnerId=1386320702
 weixin.partnerKey=952070
