--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -71,7 +71,7 @@
         <filter-class>com.leoman.common.filter.WechatFilter</filter-class>
         <init-param>
             <param-name>skipUrls</param-name>
-            <param-value>/wechat/login/*,/wechat/login,/wechat/register,/wechat/register1,/wechat/register2,
+            <param-value>,/wechat,/wechat/login/*,/wechat/login,/wechat/register,/wechat/register1,/wechat/register2,
                 /wechat/agreement,/wechat/index,/wechat/sms/code,/wechat/check/code,/wechat/toFindPwd,/wechat/error</param-value>
         </init-param>
     </filter>
