--- a/pom.xml
+++ b/pom.xml
@@ -347,7 +347,7 @@
                 <pro.jdbc.password>root</pro.jdbc.password>
                 <pro.upload.url>http://127.0.0.1:8085/files/upload/</pro.upload.url>
                 <pro.upload.path>D:/devsoftware/apache-tomcat-7.0.67/webapps/files/upload/</pro.upload.path>
-                <base.url>http://localhost:8085/rcbus/</base.url>
+                <base.url>http://1e5e3f44.ittun.com/rcbus/</base.url>
                 <base.domain>http://localhost:8085/rcbus/</base.domain>
             </properties>
         </profile>
