--- a/pom.xml
+++ b/pom.xml
@@ -348,7 +348,7 @@
                 <pro.upload.url>http://127.0.0.1:8085/files/upload/</pro.upload.url>
                 <pro.upload.path>D:/devsoftware/apache-tomcat-7.0.67/webapps/files/upload/</pro.upload.path>
                 <base.url>http://1e5e3f44.ittun.com/rcbus/</base.url>
-                <base.domain>http://localhost:8085/rcbus/</base.domain>
+                <base.domain>http://1e5e3f44.ittun.com</base.domain>
             </properties>
         </profile>
     </profiles>
