--- a/common/src/main/resources/conf/system.properties
+++ b/common/src/main/resources/conf/system.properties
@@ -11,7 +11,7 @@ weixin.secret=590a56ca299e9823a88d93025eed7f4f
 weixin.token=weixin
 weixin.aesKey=jjQlRibNnfnJJ3hTjXAKfGd5ltLtLmk3TfdsWbsLuZV
 weixin.partnerId=1386320702
-weixin.partnerKey=952070
+weixin.partnerKey=4294fa96d2f13610d60bddfba6da1629
 
 
 sms.api.key=0097c3f7f892c9314b98076b588d994d
