--- a/common/pom.xml
+++ b/common/pom.xml
@@ -8,11 +8,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>com.leoman</groupId>
     <artifactId>common</artifactId>
-    <build>
-        <finalName>server</finalName>
-    </build>
+    <packaging>jar</packaging>
+    <name>common</name>
+    <version>1.0</version>
+    <url>http://maven.apache.org</url>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -20,5 +22,40 @@
             <version>3.10-FINAL</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>rcbus-common</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 
 </project>
