--- a/pom.xml
+++ b/pom.xml
@@ -347,8 +347,8 @@
                 <pro.jdbc.password>root</pro.jdbc.password>
                 <pro.upload.url>http://127.0.0.1/files/upload/</pro.upload.url>
                 <pro.upload.path>D:/tomcat/apache-tomcat-7.0.69/webapps/files/upload/</pro.upload.path>
-                <base.url>http://1e5e3f44.ittun.com/rcbus/</base.url>
-                <base.domain>http://1e5e3f44.ittun.com</base.domain>
+                <base.url>http://www.whjcbs.com/leoman_rcbus/</base.url>
+                <base.domain>http://www.whjcbs.com</base.domain>
             </properties>
         </profile>
     </profiles>-->
