--- a/pom.xml
+++ b/pom.xml
@@ -346,9 +346,9 @@
                 <pro.jdbc.url>jdbc:mysql://localhost:3306/rcbus?characterEncoding=UTF-8</pro.jdbc.url>
                 <pro.jdbc.username>root</pro.jdbc.username>
                 <pro.jdbc.password>root</pro.jdbc.password>
-                <pro.upload.url>http://127.0.0.1/files/upload/</pro.upload.url>
+                <pro.upload.url>http://localhost:8082/files/upload/</pro.upload.url>
                 <pro.upload.path>D:/devsoftware/apache-tomcat-7.0.72/webapps/files/upload/</pro.upload.path>
-                <base.url>http://localhost/leoman_rcbus/</base.url>
+                <base.url>http://localhost:8082/leoman_rcbus/</base.url>
                 <base.domain>http://localhost</base.domain>
             </properties>
         </profile>
