--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
     </listener>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:root-context.xml</param-value>
+        <param-value>classpath:spring-im.xml</param-value>
     </context-param>
 
     <filter>
